priceを3桁区切り（日本円表記）

--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Price:</strong>
-  <%= @property.price %><strong>円</strong>
+  <%= converthing_jpy(@property.price) %><strong></strong>
 </p>
 
 <p>
