--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -18,7 +18,7 @@
     <% @properties.each do |property| %>
       <tr>
         <td><%= property.name %></td>
-        <td><%= property.price %>円</td>
+        <td><%= converthing_jpy(property.price) %></td>
         <td><%= property.address %></td>
         <td><%= property.constraction %>年</td>
         <td><%= property.remark %></td>
