--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -5,11 +5,11 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Address</th>
-      <th>Constraction</th>
-      <th>Remark</th>
+      <th>物件名</th>
+      <th>賃料</th>
+      <th>住所</th>
+      <th>築年数</th>
+      <th>備考</th>
       <th colspan="3"></th>
     </tr>
   </thead>
