駅数の関数をビュー内に変更＋賃料validates設定（0円以上）

--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -36,8 +36,9 @@
     <%= form.text_area :remark %>
   </div>
 
+  <% n = 0 %>
   <%= form.fields_for :stations do |s| %>
-      最寄駅<%= @n += 1 %>
+      最寄駅<%= n += 1 %>
 
     <div class="field">
       <%= s.label :route_name %>
